--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.4.0",
+    "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.4",
+    "crypto-random-string": "^3.3.0",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
@@ -15,6 +18,7 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.7.0",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.17",
     "morgan": "~1.9.1"
   }
